# cam-control

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml  requirements.dev.in  requirements.dev.txt  requirements.in  requirements.txt  setup.py
camcontrol/: main.py
